# web-fastapi

./: .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 06e44afe52ff_create_project_table.py  bacda5c6ecd8_create_are_doubt_table.py  ca5d4242b3a7_create_users_table.py  e5f459a543d1_create_comments_post_tables.py
website_fastapi/: app.py  create_table.py
website_fastapi/core/: configs.py  database.py
website_fastapi/models/: __all_models.py  __init__.py  area_model.py  author_model.py  comment_model.py  doubt_model.py  member_model.py  post_model.py  project_model.py  tag_model.py
website_fastapi/templates/: _base.html
website_fastapi/templates/home/: about.html  blog_home.html  blog_post.html  blog_preview.html  call_action.html  contact.html  faq.html  features.html  header.html  index.html  portfolio.html  portfolio_item.html  pricing.html  testimonial.html
website_fastapi/templates/home/about/: header.html  section_one.html  section_two.html  team_members.html
website_fastapi/views/: home_view.py
