[tool.poetry]
name = "website-fastapi"
version = "0.1.0"
description = ""
authors = ["Tatiane Weitzel <weitzeltati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
aiofile = "^3.8.8"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.2"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.6"
httpx = "^0.27.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev website_fastapi/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=website-fastapi -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
